compiler/types/correctness/CorrectnessTest.java: assert(layout->tag() == DataLayout::speculative_trap_data_tag) failed: wrong type

XMLWordPrintable

    • b12
    • b40
    • x86_64
    • linux, windows

        compiler/types/correctness/CorrectnessTest.java failed on windows x64 only for jdk9/hs/nightly:

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (C:\\jprt\\T\\P1\\210633.drchase\\s\\src\\share\\vm\\oops/methodData.hpp:1934), pid=18720, tid=9828
        # assert(layout->tag() == DataLayout::speculative_trap_data_tag) failed: wrong type
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0-b12) (build 1.9.0-ea-fastdebug-b12)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-internal-201405092106.drchase.8037816-fastdebug mixed mode windows-amd64 compressed oops)
        # Core dump written. Default location: C:\\local\\aurora\\sandbox\\results\\workDir\\compiler\\types\\correctness\\CorrectnessTest\\hs_err_pid18720.mdmp
        #
        Unsupported internal testing APIs have been used.

              Assignee:
              Igor Ignatyev (Inactive)
              Reporter:
              Alejandro Murillo
              Votes:
              0 Vote for this issue
              Watchers:
              11 Start watching this issue

                Created:
                Updated:
                Resolved: